[workspace]
members = ["impls", "linked_lists", "traits", "queue"]

[package]
name = "hash_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impls = {path = "impls"}
traits = {path = "traits"}

[dev-dependencies]
rand = "0.8.5"